--- a/src/components/write/Write.css
+++ b/src/components/write/Write.css
@@ -1,16 +1,13 @@
 .custom-card {
     display: flex;
     flex-direction: column;
-    border-top: 1px solid #000000;
+    border-top: 1px solid var(--color-text);
     overflow: hidden;
-    /* max-width: 400px; */
     height: 400px;
-    background-color: #fff;
     font-family: Arial, sans-serif;
    position: relative;
   }
 
-  
   .custom-card__content {
     padding: 16px 0px;
   }
@@ -27,7 +24,6 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     margin: 0 0 8px;
-    color: #333;
     cursor: pointer;
 
     display: -webkit-box;
@@ -75,6 +71,7 @@
   }
   .white-blur-background {
     background: rgba(255, 255, 255,0.9);
+    color: #000000;
     
   }
   .blog-card__title {
